--- a/test.html
+++ b/test.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1> Hello World is the firt chnge</h1> 
+    <p> I am learning the git hub and git basic to control my versions of code</p>
     
 </body>
 </html>
